<resources>
    <string name="app_name">Parametros</string>
    <string name="txtnombre">Nombre</string>
    <string name="txtnombre1">Nombre</string>
    <string name="txtemail">Email</string>
    <string name="txtemail1">Email</string>
    <string name="txttwitter">Twitter</string>
    <string name="txttel">Telefono</string>
    <string name="txtdate">Fecha_Nacimiento</string>
    <string name="btnguardar">Guardar</string>
    <string name="btnregresar">Regresar</string>
</resources>
